docs: better explain quickfix approach